Fix YouTube playback in multimedia player on iOS

--- a/src/plugins/multimedia/_base.scss
+++ b/src/plugins/multimedia/_base.scss
@@ -84,7 +84,7 @@ $mm-volume-thumb-width: 10px;
 
 	&.video {
 
-		&:not(.playing):not(.waiting) {
+		&:not(.playing):not(.waiting):not(.yt-ios) {
 			@include multimedia_overlay_base;
 			@include multimedia_overlay_play;
 		}
